--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
+    <img src="acustica.jpg" alt="">
     <p>Parrafo de prueba1</p>
     <p>Agregando parrafo 2</p>
   </body>
