--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.jpg" alt="">
+    <img src="clasica.jpg" alt="">
     <p>Parrafo de prueba1</p>
     <p>Agregando parrafo 2</p>
   </body>
