--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" href="estyle.css">
   </head>
   <body>
-    <img src="header.jpg" alt="">
-    <img src="hero.jpg" alt="">
-    <img src="acustica.jpg" alt="">
-    <img src="clasica.jpg" alt="">
-    <p>Parrafo de prueba1</p>
-    <p>Agregando parrafo 2</p>
+    <img src="nueva-version.jpg" alt="">
   </body>
 </html>
