Agregando responsive designe a la página

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Invie</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minimun-scale=1">
     <link rel="stylesheet" href="estyle.css">
   </head>
   <body>
+    <img src="invie-responsive.png" alt="" id="responsive">
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
     <img src="acustica.jpg" alt="">
